disable Windows Authentication
translate to German

adapt IndexMeba for images

--- a/ZeiterfassungPierburg/Views/Shared/ErrorAccessDenied.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/ErrorAccessDenied.cshtml
@@ -16,7 +16,7 @@
             </p>
 
             <p>
-                <button class="btn-toolbar" onclick="goBack()">Zurück auf die vorige Seite</button>
+                <button class="btn-toolbar" onclick="goBack()">Zurück auf die vorherige Seite</button>
             </p>
         </div>
     </div>
