--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -10,7 +10,6 @@
     else
     {
         <title>@ViewBag.Title </title>
-
     }
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -30,7 +29,7 @@
 
         <div class="wrapper">
 
-            <div class="hold-transition skin-blue sidebar-mini">
+            <div class="hold-transition skin-green sidebar-mini">
                 <!-- Main Header -->
                 <header class="main-header">
 
@@ -123,10 +122,9 @@
     else if (Convert.ToInt32(Session["AccessLayer"]) == 1)
     {
 
-
         <div class="wrapper">
 
-            <div class="hold-transition skin-blue sidebar-mini">
+            <div class="hold-transition skin-yellow sidebar-mini">
                 <!-- Main Header -->
                 <header class="main-header">
 
