--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -24,6 +24,9 @@
 
     <!-- Small boxes (Stat box) -->
     <div class="row">
+
+
+
         <div class="col-lg-3 col-xs-6">
             <!-- small box -->
             <div class="small-box bg-aqua">
@@ -55,6 +58,7 @@
                 <a href="~/Produktionsanlage/Index" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
+
         <!-- ./col -->
         <div class="col-lg-3 col-xs-6">
             <!-- small box -->
@@ -87,6 +91,60 @@
                 <a href="~/MitarbeiterInSchicht/Index" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
+        <div class="col-lg-3 col-xs-6">
+            <div class="box-footer text-black">
+                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Bänder</h4>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <!-- Progress bars -->
+                        <div class="clearfix">
+                            <div id="productivity"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box-footer text-black">
+
+                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Maschinen</h4>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <!-- Progress bars -->
+                        <div class="clearfix">
+                            <div id="productivityMaschinen"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="col-lg-6 col-xs-6">
+
+            <div class="row">
+                <div class="box-footer text-black">
+                    <h4>Produktivität der letzten 12 Monate</h4>
+
+                    <div class="row">
+                        <canvas id="bar-chart" width="800" height="450"></canvas>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="box-footer text-black">
+                    <h4>Placeholder for Pronom</h4>
+
+                    <div class="row">
+                        <iframe src="https://de.wikipedia.org/wiki/Rheinmetall_Automotive" width="100%" height="400" name="SELFHTML_in_a_box"></iframe>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- ./col -->
         <!-- ./col -->
         <div class="col-lg-3 col-xs-6">
             <div class="box-footer text-black">
@@ -127,44 +185,12 @@
                 </div>
             </div>
         </div>
-        <!-- ./col -->
 
-        <div class="col-lg-3 col-xs-6">
-            <div class="box-footer text-black">
-                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Bänder</h4>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <!-- Progress bars -->
-                        <div class="clearfix">
-                              <div id="productivity"></div> 
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="box-footer text-black">
 
-                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Maschinen</h4>
+    </div>
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        <!-- Progress bars -->
-                        <div class="clearfix">
-                            <div id="productivityMaschinen"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="col-lg-6 col-xs-2">
-            <div class="box-footer text-black">
-                <h4>Produktivität der letzten 12 Monate</h4>
 
-                <div class="row">
-                    <canvas id="bar-chart" width="800" height="450"></canvas>
-                </div>
-            </div>
-        </div>
 </section>
 
 @section scripts{
