--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -3,6 +3,11 @@
 @Styles.Render("~/bundles/tablePluginStyleBundle");
 
 
+
+
+<title>
+    @ViewBag.Title
+</title>
 <section class="content container-fluid">
     <div class="box-header with-border">
         <div class="box box-info">
@@ -10,7 +15,7 @@
                 <h3>Übersicht der Mitarbeiter in Schichten</h3>
 
 
-                <div class="row row-list" style="padding-bottom: 25px; padding-top: 5px">
+                <div class="row row-list" style="padding-bottom: 25px; padding-top: 15px">
                     <div class="col-xs-2">
                         <label>Einträge von:</label>
                         <input class="form-control text-box single-line" id="min" name="Datum" type="date">
@@ -32,7 +37,7 @@
                     </div>
                 </div>
 
-                <table id="myTable" class="table table-striped table-bordered" style="width:100%">
+                <table id="myTable" class="table table-striped table-bordered" style="text-align:center">
                     <thead>
                         <tr>
                             <th>
@@ -82,7 +87,7 @@
                             </th>
 
                             <th>
-                                Aktionen
+
                             </th>
                         </tr>
                     </thead>
@@ -139,10 +144,13 @@
                                     -->
                                 <td>
 
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                    <a href="MitarbeiterInSchicht/Edit/@item.ID"><span style="color:black" class="glyphicon glyphicon-edit"></span></a>
 
-                                    <p id="@item.ID" hidden>@item.IstInSAPEingetragen</p> <!-- keep value of istINSAPEingetragen becaue the boolen value can't be passed as attribute (dunno why)-->
+                                    |
+                                    <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
+                                    <a href="MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:black"  class="glyphicon glyphicon-remove"></span></a>
+
+                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen becaue the boolen value can't be passed as attribute (dunno why)-->
                                 </td>
                             </tr>
                         }
@@ -150,8 +158,9 @@
                 </table>
                 @ViewBag.Message
 
-
-                @Html.ActionLink("Neue Zeiterfassung", "Create", "Neuezeiterfassung", null, new { @class = "pull-right btn btn-default", @type = "button", });
+                <!--
+                     @Html.ActionLink("Neue Zeiterfassung", "Create", "Neuezeiterfassung", null, new { @class = "pull-right btn btn-default", @type = "button", });
+                -->
             </div>
         </div>
     </div>
@@ -170,120 +179,152 @@
 
 
     <script>
-        function addDays(date, days) {
-            var result = new Date(date);
-            result.setDate(result.getDate() + days);
-            return result;
-        }
-        var today = new Date();
 
-        jQuery.fn.dataTableExt.afnFiltering.push(
-            function (oSettings, aData, iDataIndex) {
-                var iColumn = 0;
-                var schichtColumn = 1;
+        var now = new Date();
 
-                var iMin = Date.parse(document.getElementById('min').value);
-                var iMax = Date.parse(document.getElementById('max').value);
+        var day = ("0" + now.getDate()).slice(-2);
+        var month = ("0" + (now.getMonth() + 1)).slice(-2);
 
-                var iVersion = (aData[iColumn] == "-" ? 0 : aData[iColumn]);
-                iVersion = Date.parse(iVersion);
-                //console.log(iVersion);
+        var today = now.getFullYear() + "-" + (month) + "-" + (day - 1);
 
-                var schichtColumn = (aData[schichtColumn] == "-" ? 0 : aData[schichtColumn]) * 1;
-                var schicht = $(document.getElementById('schicht')).children("option:selected").val();
+        $('#min').val(today);
+        $('#max').val(today);
 
-                if ((iMin > iVersion || iVersion > iMax) || (schicht != schichtColumn && schicht != "")) {
 
-                    return false;
+
+
+            function addDays(date, days) {
+                var result = new Date(date);
+                result.setDate(result.getDate() + days);
+                return result;
+            }
+            var today = new Date();
+
+            jQuery.fn.dataTableExt.afnFiltering.push(
+                function (oSettings, aData, iDataIndex) {
+                    var iColumn = 0;
+                    var schichtColumn = 1;
+
+                    var iMin = Date.parse(document.getElementById('min').value);
+                    var iMax = Date.parse(document.getElementById('max').value);
+
+                    var iVersion = (aData[iColumn] == "-" ? 0 : aData[iColumn]);
+                    iVersion = Date.parse(iVersion);
+                    //console.log(iVersion);
+
+                    var schichtColumn = (aData[schichtColumn] == "-" ? 0 : aData[schichtColumn]) * 1;
+                    var schicht = $(document.getElementById('schicht')).children("option:selected").val();
+
+                    if ((iMin > iVersion || iVersion > iMax) || (schicht != schichtColumn && schicht != "")) {
+
+                        return false;
+                    }
+                    else return true;
                 }
-                else return true;
-            }
-        );
+            );
 
-        var table = document.getElementById('myTable');
+            var table = document.getElementById('myTable');
 
-        var rowLength = table.rows.length;
-        for (var i = 0; i < rowLength; i += 1) {
+            var rowLength = table.rows.length;
+            for (var i = 0; i < rowLength; i += 1) {
 
-            var row = table.rows[i];
-            var id = row.getAttribute('value'); //id
-            var boolValue = $('#' + id).text(); //get bool value
-
-            if (boolValue == 'True') {
-                $("#eintragen_" + id).prop("checked", true);
-                $(row).css("background-color", "#90ee90");
-            }
-            if (boolValue == 'False') {
-                $("#eintragen_" + id).prop("checked", false)
-
-                $(row).css("background-color", "#ffcccb");
-            }
-        }
-
-
-        $(document).ready(function () {
-
-            //console.log(document.getElementById('min').value);
-            //document.getElementById('min').value = '15-Jan-2020';
-
-
-            var table = $('#myTable').DataTable(
-                {
-                    dom: 'Bfrtip',
-                    dom: 'Bfrtip',
-                    buttons: [
-                        'copy', 'csv', 'excel', 'pdf', 'print'
-                    ]
-                });
-
-            $('#min, #max, #schicht').change(function () {
-                table.draw();
-            });
-
-
-            /*
-            $('table > tbody  > tr').each(function (index, tr) {
-
-                var bla = tr.attr("value");
-                console.log(bla);
-
-            });
-
-    */
-
-
-
-        });
-
-         var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
-
-            $('[id^=eintragen_]').click(function () {
-
-                var id = $(this).attr('value'); // get ID
+                var row = table.rows[i];
+                var id = row.getAttribute('value'); //id
                 var boolValue = $('#' + id).text(); //get bool value
 
-                var row = $(this).closest("tr");
-
-                //console.log(boolValue);
-
-                $.getJSON(url, { istEingetragen: boolValue, id: id }, function (response) {
-
-                    if (response == 0) {
-                        alert('Das lief schief. Aktualisiere die Seite und versuhce es erneut.')
-                    }
-                });
-
                 if (boolValue == 'True') {
-                    $(row).css("background-color", "#ffcccb");
-                    $('#' + id).text('False');
-                }
-                else if (boolValue == 'False') {
+                    $("#eintragen_" + id).prop("checked", true);
                     $(row).css("background-color", "#90ee90");
-                    $('#' + id).text('True');
-
-
                 }
+                if (boolValue == 'False') {
+                    $("#eintragen_" + id).prop("checked", false)
+
+                    $(row).css("background-color", "#ffcccb");
+                }
+            }
+
+
+            $(document).ready(function () {
+
+                //console.log(document.getElementById('min').value);
+                //document.getElementById('min').value = '15-Jan-2020';
+
+
+                var table = $('#myTable').DataTable(
+                    {
+                        dom: 'Bfrtip',
+                        buttons: [
+                            {
+                                extend: 'copyHtml5',
+                                text: '<i class="fa fa-files-o"></i>',
+                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_copy.png"/></span>',
+                                exportOptions: {
+                                    columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
+                                }
+                            },
+                            {
+                                extend: 'excelHtml5',
+                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_excel.png"/></span>',
+                                exportOptions: {
+                                    columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
+                                }
+                            },
+                            {
+                                extend: 'pdfHtml5',
+                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_pdf.png"/></span>',
+                                exportOptions: {
+                                    columns: [0, 1, 2, 4,5,6,7,8,9,10,11]
+                                }
+                            },
+                            {
+                                extend: 'print',
+                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_print.png"/></span>',
+                                exportOptions: {
+                                    columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
+                                }
+                            }
+
+                        ]
+                    });
+
+                $('#min, #max, #schicht').change(function () {
+                    table.draw();
+                });
         });
+
+
+
+
+
+             var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
+
+                $('[id^=eintragen_]').click(function () {
+
+                    var id = $(this).attr('value'); // get ID
+                    var boolValue = $('#' + id).text(); //get bool value
+
+                    var row = $(this).closest("tr");
+
+                    //console.log(boolValue);
+
+                    $.getJSON(url, { istEingetragen: boolValue, id: id }, function (response) {
+
+                        if (response == 0) {
+                            alert('Das lief schief. Aktualisiere die Seite und versuhce es erneut.')
+                        }
+                    });
+
+                    if (boolValue == 'True') {
+                        $(row).css("background-color", "#ffcccb");
+                        $('#' + id).text('False');
+                    }
+                    else if (boolValue == 'False') {
+                        $(row).css("background-color", "#90ee90");
+                        $('#' + id).text('True');
+
+
+                    }
+            });
 
 
 
