--- a/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
@@ -18,7 +18,7 @@
         <div class="wrapper">
             <div class="hold-transition skin-blue sidebar-mini">
                 <!-- Main Header -->
-                <header class="main-header">
+                <header class="main-header" >
 
                     <!-- Logo -->
                     <a href="~/" class="logo">
@@ -40,7 +40,8 @@
                                 <!-- User Account Menu -->
                                 <li class="dropdown user user-menu">
                                     <!-- Menu Toggle Button -->
-                                    @Html.ActionLink("Anmelden", "Login", "Zugriffsrechte")
+                                    <a href="/Zugriffsrechte/Login"><span class="glyphicon glyphicon-log-in"></span></a>
+
                                 </li>
                                 <!--
                 <li>
@@ -71,28 +72,29 @@
                 <!-- Content Wrapper. Contains page content -->
                 <div class="content-wrapper">
 
-                    <!--
-                    <div class="navbar navbar-inverse navbar-fixed-top">
-                        <div class="container">
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                            </div>
-                            <div class="navbar-collapse collapse">
-                                <ul class="nav navbar-nav">
-                                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
-                                </ul>
-                                @Html.Partial("_LoginPartial")
-                            </div>
-                        </div>
-                    </div> -->
+                    <!--
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                </ul>
+                @Html.Partial("_LoginPartial")
+            </div>
+        </div>
+    </div> -->
                     @RenderBody()
 
                 </div>
