--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -35,6 +35,18 @@
                             <option value="3">Nacht</option>
                         </select>
                     </div>
+
+                    <!--
+    <div class="col-xs-2">
+
+        <label>Wähle das Band aus:</label>
+        @Html.DropDownList("accountid", new SelectList(ViewBag.AnlageFilter));
+
+    </div>
+        -->
+
+
+
                 </div>
 
                 <table id="myTable" class="table table-striped table-bordered" style="text-align:center">
